packages/fortifier-macros-tests/tests/validations/email-address/unknown_fail.stderr
error: unknown parameter
 --> tests/validations/email-address/unknown_fail.rs:5:30
  |
5 |     #[validate(email_address(unknown = true))]
  |                              ^^^^^^^
